Added custom visualization, further neo helpers and persons in JSON API
